SEO for web search

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Evangadi Network</title>
+    <title>Evangadi Networks</title>
+    <meta
+      name="description"
+      content="www.evangadi.com is A platform for sharing and learning about web development and related topics. Join us today!"
+    />
+    <meta
+      name="keywords"
+      content="Evangadi-Forum, Evangaidi-Networks ,Web development"
+    />
   </head>
   <body>
     <div id="root"></div>
